--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tallboyworld
-description: A new Flutter project.
+description: This is TallBoyWorld.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -23,6 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  #https://pub.dev/packages/provider/install :
+  provider: ^4.3.2+3
+  # https://pub.dev/packages/flutter_staggered_grid_view/install
+  flutter_staggered_grid_view: ^0.3.2
+  #https://pub.dev/packages/fluttertoast
+  fluttertoast: ^7.1.5
+  #https://pub.dev/packages/http/install
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,8 +53,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/welcome.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
